--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,10 @@ repositories {
 }
 
 dependencies {
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    testImplementation 'org.testng:testng:7.1.0'
+
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
