--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.testng:testng:7.1.0'
-
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
 }
 
 test {
-    useTestNG()
+    useJUnitPlatform()
 }
